-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 13
-
Component/s: hotspot
-
b28
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8226906 | 14 | Robbin Ehn | P3 | Resolved | Fixed | b04 |
| JDK-8228258 | 13.0.2 | Robbin Ehn | P3 | Resolved | Fixed | b01 |
| JDK-8228042 | 13.0.1 | Robbin Ehn | P3 | Resolved | Fixed | master |
A few places tries to use safepoint counter to detect that a safepoint happened. This does not work reliably. Which in a few cases has lead to crashes.
- backported by
-
JDK-8226906 Safepoint counter can't be used for safepoint detection
-
- Resolved
-
-
JDK-8228042 Safepoint counter can't be used for safepoint detection
-
- Resolved
-
-
JDK-8228258 Safepoint counter can't be used for safepoint detection
-
- Resolved
-
- relates to
-
JDK-8066173 compiler/types/correctness/OffTest.java failed with assert
-
- Resolved
-