8225702: Safepoint counter can't be used for safepoint detection

Reviewed-by: dcubed, dholmes